--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-<title>Krišjāņa mājaslapa 10.1</title>
+<title>Krišjānis Noviks</title>
 <meta http-equiv="Content-Type" CONTENT="text/html; charset=UTF-8"/>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300" rel="stylesheet">
@@ -10,12 +10,10 @@
 <div id='Left'>
 	<div class="btn-group">
 		<a href="index.html"><button class="button">Sākums</button></a>
-		<a href="gimp.html"><button class="button">GIMP</button></a>
-		<a href="ink.html"><button class="button">Inkscape</button></a>
-		<a href="kodi.html"><button class="button">Mani kodi</button></a>
-		<a href="tabula.html"><button class="button">Tabula</button></a>
-		<a href="forma.html"><button class="button">Forma</button></a>
-		<a href="lightbox.html"><button class="button">Lightbox</button></a>
+		<a href="gimp.html"><button class="button">Bildes</button></a>
+		<a href="ink.html"><button class="button">Video</button></a>
+		<a href="kodi.html"><button class="button">Mūzika</button></a>
+		<a href="tabula.html"><button class="button">Memes</button></a>
 	</div>
 	
 </div>
