--- a/index.html
+++ b/index.html
@@ -7,24 +7,19 @@
 </head>
 
 <body>
-<div id='Left'>
+<div id='top'>KRIŠJĀNIS NOVIKS</div>
+
+<div id='navigation'>
 	<div class="btn-group">
-		<a href="index.html"><button class="button">Sākums</button></a>
-		<a href="gimp.html"><button class="button">Bildes</button></a>
-		<a href="ink.html"><button class="button">Video</button></a>
-		<a href="kodi.html"><button class="button">Mūzika</button></a>
-		<a href="tabula.html"><button class="button">Memes</button></a>
+	<a href="index.html"><button class="button">Sākums</button></a>
+	<a href="bildes.html"><button class="button">Bildes</button></a>
+	<a href="muzika.html"><button class="button">Mūzika</button></a>
+	<a href="memes.html"><button class="button">Memes</button></a>
+	<a href="video.html"><button class="button">Video</button></a>
 	</div>
-	
 </div>
 
-<div id='Right'>
-<div id='top'>SĀKUMS</div>
-<div id="content">
-
-
-info
-</div>
+<div id="content">info</div>
 	
 </body>
 </html>
