--- a/muzika.html
+++ b/muzika.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div id='top'>KRIŠJĀNIS NOVIKS</div>
+<div id='top'>MŪZIKA</div>
 
 <div id='navigation'>
 	<div class="btn-group">
