--- a/bildes.html
+++ b/bildes.html
@@ -23,7 +23,7 @@
 
 <div class="row">
 <div class="column">
-	<img src="ps/anime control.png">
+	<img src="ps/anime control.jpg">
 	<img src="ps/anrijs ballin.png">
 	
 	<div class="hvrbox">
@@ -44,7 +44,7 @@
 		</div></div>
 	
 
-	<img src="ps/edgars sneak master.jpeg">
+	<img src="ps/edgars sneak master.png">
 	
 	<div class="hvrbox">
 		<img src="ps/eggars.png" class="hvrbox-layer_bottom">
@@ -78,7 +78,7 @@
 	<img src="ps/meza fona.png">
 	<img src="ps/mezs fona.png">
 	<div class="hvrbox">
-		<img src="ps/star nibbas.jpg" class="hvrbox-layer_bottom">
+		<img src="ps/star nibbas.png" class="hvrbox-layer_bottom">
 		<div class="hvrbox-layer_top">
 			<div class="hvrbox-text">made by Visvaldis Lenkevics</div>
 		</div></div>
@@ -87,7 +87,7 @@
 	<img src="ps/ģimenes bilde.png">
 	<img src="ps/glocktopus.png">
 	<img src="ps/ka pieradinat renzinupuki.png">
-	<img src="ps/kendama.jpg">
+	<img src="ps/kendama.png">
 	<img src="ps/minecraft kristaps.png">
 	<img src="ps/miners.png">
 	
