--- a/bildes.html
+++ b/bildes.html
@@ -33,6 +33,8 @@
 		</div></div>
  
 	<img src="ps/christmas squad.png">
+	<img src="ps/lofi.png">
+	
 	<img src="ps/cipits.png">
 	
 	<img src="ps/dnd banda smal.png">
@@ -75,6 +77,10 @@
 	<img src="ps/lord of the noggers.png">
 	<img src="ps/mafija.png">
 	<img src="ps/meth.png">
+	<img src="ps/lofiep2.png" class="hvrbox-layer_bottom">
+		<div class="hvrbox-layer_top">
+			<div class="hvrbox-text">made by Roberts Daniels Zaičenko</div>
+		</div></div>
 	<img src="ps/meza fona.png">
 	<img src="ps/mezs fona.png">
 	<div class="hvrbox">
