--- a/bildes.html
+++ b/bildes.html
@@ -77,6 +77,8 @@
 	<img src="ps/lord of the noggers.png">
 	<img src="ps/mafija.png">
 	<img src="ps/meth.png">
+	
+	<div class="hvrbox">
 	<img src="ps/lofiep2.png" class="hvrbox-layer_bottom">
 		<div class="hvrbox-layer_top">
 			<div class="hvrbox-text">made by Roberts Daniels Zaičenko</div>
