--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 	</div>
 </div>
 
-<div id="content">info</div>
+<div id="content">
+
+<img class='baby' src="bildes/baby.gif">
+
+</div>
 	
 </body>
 </html>
