--- a/muzika.html
+++ b/muzika.html
@@ -22,7 +22,7 @@
 <div id="content">
 
 
-<p class="musictitle">high quality lofi ep to study or relax to by Krišjānis Noviks</p>
+<p class="musictitle"><a href="lofi ep.html">high quality lofi ep to study or relax to by Krišjānis Noviks</a></p>
 <iframe class="soundcloud" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/781152961&color=%23ac90dc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
 </div>
