--- a/lofi ep.html
+++ b/lofi ep.html
@@ -23,17 +23,24 @@
 
 <iframe class="soundcloud" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/781152961&color=%23ac90dc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
-<img src="lofiepcovers/auschwitz.png">
-<img src="lofiepcovers/android kamera.png">
-<img src="lofiepcovers/dinozaurs.png">
-<img src="lofiepcovers/first.png">
-<img src="lofiepcovers/hs.png">
-<img src="lofiepcovers/roze.png">
-<img src="lofiepcovers/rz.png">
-<img src="lofiepcovers/upe.png">
-<img src="lofiepcovers/zaic.png">
 
-
+<table>
+  <tr>
+	<th><img style="width:" src="lofiepcovers/auschwitz.png"></th>
+	<th><img src="lofiepcovers/android kamera.png"></th>
+	<th><img src="lofiepcovers/dinozaurs.png"></th>
+	</tr>
+	<tr>
+	<th><img src="lofiepcovers/first.png"></th>
+	<th><img src="lofiepcovers/hs.png"></th>
+	<th><img src="lofiepcovers/roze.png"></th>
+	</tr>
+	<tr>
+	<th><img src="lofiepcovers/rz.png"></th>
+	<th><img src="lofiepcovers/upe.png"></th>
+	<th><img src="lofiepcovers/zaic.png"></th>
+	</tr>
+</table>
 </div>
 	
 </body>
