--- a/lofi ep.html
+++ b/lofi ep.html
@@ -26,7 +26,7 @@
 
 <table>
   <tr>
-	<th><img style="width:" src="lofiepcovers/auschwitz.png"></th>
+	<th><img src="lofiepcovers/auschwitz.png"></th>
 	<th><img src="lofiepcovers/android kamera.png"></th>
 	<th><img src="lofiepcovers/dinozaurs.png"></th>
 	</tr>
