--- a/lofi ep.html
+++ b/lofi ep.html
@@ -21,8 +21,23 @@
 
 <div id="content">
 
-<iframe class="soundcloud" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/781152961&color=%23ac90dc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+<iframe class="soundcloud" style=" width:100%;" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/781152961&color=%23ac90dc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
+<p>Tracklist:</p>
+<ol>
+	<li>coffee shop</li>
+	<li>Yoda</li>
+	<li>dawn</li>
+	<li>nightingale</li>
+	<li>kaktuss</li>
+	<li>Stella</li>
+	<li>radiovilnis</li>
+	<li>Lou</li>
+	<li>painting</li>
+	<li>ilgas</li>
+	<li>chocolate</li>
+</ol>
+<a href="music/Krišjāņa lofi ep.zip" download="Krišjāņa lofi ep">Download</a>
 
 <table>
   <tr>
