--- a/lofi ep.html
+++ b/lofi ep.html
@@ -37,7 +37,7 @@
 	<li>ilgas</li>
 	<li>chocolate</li>
 </ol>
-<a href="music/Krišjāņa lofi ep.zip" download="Krišjāņa lofi ep">Download</a>
+<a href="https://drive.google.com/open?id=188p3LsgGA8WqFDNTgZlzsQIYUjmTZc4Y">Download</a>
 
 <table>
   <tr>
