--- a/lofi ep.html
+++ b/lofi ep.html
@@ -23,22 +23,25 @@
 
 <iframe class="soundcloud" style=" width:100%;" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/781152961&color=%23ac90dc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
+<div id="left">
 <p>Tracklist:</p>
 <ol>
-	<li>coffee shop</li>
+	<li><a href="https://soundcloud.com/klucens/coffee-shop">coffee shop</a></li>
 	<li>Yoda</li>
 	<li>dawn</li>
-	<li>nightingale</li>
-	<li>kaktuss</li>
+	<li><a href="https://soundcloud.com/klucens/nightingale">nightingale</a></li>
+	<li><a href="https://soundcloud.com/klucens/kaktuss">kaktuss</a></li>
 	<li>Stella</li>
-	<li>radiovilnis</li>
+	<li><a href="https://soundcloud.com/klucens/radiowave">radiovilnis</a></li>
 	<li>Lou</li>
-	<li>painting</li>
+	<li><a href="https://soundcloud.com/klucens/painting">painting</a></li>
 	<li>ilgas</li>
 	<li>chocolate</li>
 </ol>
 <a href="https://drive.google.com/open?id=188p3LsgGA8WqFDNTgZlzsQIYUjmTZc4Y">Download</a>
+</div>
 
+<div id="right">
 <table>
   <tr>
 	<th><img src="lofiepcovers/auschwitz.png"></th>
@@ -57,7 +60,10 @@
 	</tr>
 </table>
 </div>
-	
+
+
+
+</div>
 </body>
 </html>
 
