--- a/lofi ep.html
+++ b/lofi ep.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div id='top'>high quality lofi ep to study or relax to by Krišjānis Noviks</div>
+<div id='top'>HIGH QUALITY LOFI EP TO STUDY AND OR RELAX TO</div>
 
 <div id='navigation'>
 	<div class="btn-group">
