--- a/bildes.html
+++ b/bildes.html
@@ -61,6 +61,7 @@
 		<div class="hvrbox-layer_top">
 			<div class="hvrbox-text">made by Jānis Starks</div>
 		</div></div>
+	<img src="ps/tallinaskvartals.png">
 	
 
 </div>  
